--- a/react-app/index.html
+++ b/react-app/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
   </head>
-  <body class="bg-gray-200">
+  <body class="md:bg-zinc-100 min-h-screen md:py-24">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
